--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Yasir Hamid</title>
     
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
+    <script type="module" src="https://unpkg.com/@splinetool/viewer@1.9.75/build/spline-viewer.js"></script>
+
    
   </head>
   <body>
